# agentspay

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Justfile  LICENSE  PROJECT_CONTEXT.md  Plan-v2-archive.md  Plan.md  README.md  SECURITY-AUDIT.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  claude-review.yml
apps/frontend/: next-env.d.ts  package.json  tailwind.config.ts
apps/frontend/app/: fonts.ts  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/frontend/app/api/[...path]/: route.ts
apps/frontend/app/demo/: page.tsx
apps/frontend/app/docs/: page.tsx
apps/frontend/app/proof/: page.tsx
apps/frontend/components/brand/: AgentsPayMark.tsx  GitHubMark.tsx
apps/frontend/components/layout/: SiteNav.tsx
apps/frontend/components/proof/: LiveReceiptDeck.tsx  ProofLedger.tsx
apps/frontend/components/sections/: AuditReceipt.tsx  DevnetTab.tsx  Footer.tsx  Hero.tsx  HostMarquee.tsx  HowItWorks.tsx  Install.tsx  LiveDemo.tsx  ProofStrip.tsx  SandboxTab.tsx  Why.tsx
apps/frontend/components/seo/: PageStructuredData.tsx  StructuredData.tsx
apps/frontend/components/ui/: CodeBlock.tsx  CountUp.tsx  KineticHeadline.tsx  LiveTxBadge.tsx  MagneticLink.tsx  Reveal.tsx  ScrollProgress.tsx  SolscanLink.tsx  Spotlight.tsx  Terminal.tsx  TiltCard.tsx  badge.tsx  button.tsx  card.tsx  progress.tsx
apps/frontend/lib/: api.ts  highlight.ts  live-tx.ts  mock-data.ts  proof-data.ts  seo.ts  utils.ts
apps/frontend/public/: llms.txt
docker/: .env.example  Caddyfile  Dockerfile.paid-endpoint  Dockerfile.shim  Dockerfile.web  README.md  docker-compose.local.yml  docker-compose.yml
docker/scripts/: backup-wallet.sh  refill-wallet.sh
docs/superpowers/plans/: 2026-05-14-website-and-live-demo.md
docs/superpowers/specs/: 2026-05-14-website-and-live-demo-design.md
examples/paid-endpoint/: Cargo.toml
examples/paid-endpoint/src/: main.rs
scripts/: devnet-smoke-test.sh
services/auth/: Cargo.toml
services/auth/src/: main.rs
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
services/mcp/: Cargo.toml
services/mcp/src/: db.rs  main.rs  pretty.rs  repo.rs  solana.rs  wallet.rs  x402.rs
services/mcp/src/entities/: audit_log.rs  budget.rs  ledger_entry.rs  mod.rs  policy.rs  prelude.rs  wallet.rs
services/mcp/src/migration/: m20260513_000001_init.rs  m20260514_000001_solana.rs  mod.rs
services/metering/: Cargo.toml
services/metering/src/: main.rs
services/payment/: Cargo.toml
services/payment/src/: main.rs
services/web-shim/: Cargo.toml
services/web-shim/src/: config.rs  devnet_wallet.rs  error.rs  latest_tx.rs  main.rs  origin_guard.rs  ratelimit.rs  session.rs  state.rs  subprocess.rs
services/web-shim/src/handlers/: devnet.rs  health.rs  mod.rs  sandbox.rs  stats.rs
