[workspace]
members = [
    "examples/paid-endpoint",
    "packages/proto",
    "services/auth",
    "services/gateway",
    "services/mcp",
    "services/metering",
    "services/payment",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
agentspay-proto = { path = "packages/proto" }
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
bincode = "1.3"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
schemars = "1"
sea-orm = { version = "1.1", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "2.3"
solana-sdk = "2.3"
spl-associated-token-account = { version = "7", default-features = false, features = ["no-entrypoint"] }
spl-token = { version = "8", default-features = false, features = ["no-entrypoint"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
