[package]
name = "agentspay-paid-endpoint-demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentspay-paid-endpoint-demo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bincode.workspace = true
bs58.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
