[package]
name = "agentspay-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentspay-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bincode.workspace = true
bs58.workspace = true
chrono.workspace = true
reqwest.workspace = true
rmcp.workspace = true
schemars.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
