[package]
name = "agentspay-payment"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentspay-proto.workspace = true
anyhow.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
