[package]
name = "agentspay-web-shim"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentspay-web-shim"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bs58.workspace = true
chrono.workspace = true
redis.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
